zalige of morocco

--- a/work_v8.html
+++ b/work_v8.html
@@ -162,7 +162,7 @@
         }
 
         nav {
-            /*background: rgba(22, 91, 49, 0.9) url('./images/zalige1.png') ;*/
+            background: rgba(22, 91, 49, 0.9) url('./images/zalige1.png') ;
             background-size: cover;
             background-color: #165B31;
             /* Dark blue background */
@@ -222,11 +222,6 @@
             width: 15%;
         }
 
-        .logo_nav {
-            background: rgba(22, 91, 49, 0.9) url('./images/360_F_306322985_fB5bVB7p0Kov1DdcV6AePJ0gwLgvnVEJ.jpg') no-repeat center center;
-        }
-
-        
         .header_logo .logo_nav {
             padding: 50px 8px;
             background-color: #ffffff;
@@ -321,7 +316,7 @@
     <div class="header_logo">
 
         <div class="logo_nav">
-            <img style="width: 100%;" src="./images/logoinstitu.png" alt="">
+            <img style="width: 100%;" src="./images/irfc_aboayyad-ff139fa05a_639x355.png" alt="">
         </div>
         <div class="header_sec2">
             <div class="menu">
