--- a/work_9.html
+++ b/work_9.html
@@ -81,11 +81,9 @@
             line-height: 1.8rem;
 
         }
-
-        #slide .panorama-content__teaser {
+        #slide .panorama-content__teaser{
             color: #165B31;
         }
-
         .panorama-content__body p {
             margin-bottom: 1rem;
             font-weight: 300;
@@ -114,7 +112,7 @@
         .rte ul {
             list-style: none;
             margin: 0rem 0 1.5rem 2.5rem;
-
+            
         }
 
         #slide.active {
@@ -185,7 +183,7 @@
 
             border-width: 7px;
             border-style: solid;
-            border-image: linear-gradient(to right, #690004, #BB262C) 1;
+            border-image: linear-gradient(to right, #690004 , #BB262C) 1;
             border-left: 0;
             border-right: 0;
             border-top: 0;
@@ -197,7 +195,7 @@
         }
 
 
-        nav .right-section>a {
+        nav .right-section > a {
             color: #ffffff;
             text-decoration: none;
             padding-right: 15px;
@@ -206,12 +204,12 @@
             border-right: 2px solid #BB262C;
         }
 
-        nav .right-section span a {
+        nav .right-section span a{
             padding-right: 10px;
             padding-left: 10px;
         }
 
-        nav .right-section span {
+        nav .right-section span{
             border-right: 2px solid #BB262C;
         }
 
@@ -225,10 +223,10 @@
         }
 
         .logo_nav {
-            background: rgba(22, 91, 49, 0.9) url('./images/zalige3.png') no-repeat center center;
+            background: rgba(22, 91, 49, 0.9) url('./images/360_F_306322985_fB5bVB7p0Kov1DdcV6AePJ0gwLgvnVEJ.jpg') no-repeat center center;
         }
 
-
+        
         .header_logo .logo_nav {
             padding: 50px 8px;
             background-color: #ffffff;
@@ -306,10 +304,8 @@
             <a href="#">PUBLICATIONS</a>
             <a href="#">REVUE</a>
             <a href="#">CONTACTS</a>
-            <span>
-                <a target="_blank"
-                    href="https://www.facebook.com/p/IRFC-Institut-Royal-de-Formation-des-Cdres-100063470006649/"><i
-                        class="fa fa-facebook"></i></a>
+            <span >
+                <a target="_blank" href="https://www.facebook.com/p/IRFC-Institut-Royal-de-Formation-des-Cdres-100063470006649/"><i class="fa fa-facebook"></i></a>
                 <!-- <a href=""><i class="fa fa-twitter"></i></a> -->
                 <!-- <a href=""><i class="fa fa-instagram"></i></a> -->
                 <a href="https://www.youtube.com/channel/UCTXaP6orcXBd6xl90OCq9fA"><i class="fa fa-youtube"></i></a>
@@ -332,7 +328,7 @@
         <div class="header_sec2">
             <div class="menu">
                 <a href="">
-                    <svg class="w-8 h-8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="w-8 h-8"  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                         <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                         <g id="SVGRepo_iconCarrier">
@@ -367,7 +363,7 @@
     <div class="hero">
         <div id="panorama"></div>
         <canvas id="gradient-overlay"></canvas>
-        <div id="slide">
+        <div id="slide" >
             <div class="close-icon" id="close-icon"></div>
             <h2 class="panorama-content__title">
                 <span>Shooting</span>
