zalige of morocco

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 
         .header_logo {
             top: 0px;
-            left: 15rem;
+            left: 12rem;
             position: absolute;
             z-index: 500;
-            width: 15%;
+            width: 14rem;
         }
 
         .logo_nav {
